# kg-viewer

./: .gitignore  CONFIG.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  app.py  config.py  pyproject.toml  requirements.txt  virtuoso.py
backend/references/: class_definitions.json
config/: .env.development  .env.production
frontend/: Dockerfile  angular.json  nginx.conf  package.json  tsconfig.json
frontend/src/: app.js  config.js  index.html  main.ts  polyfills.ts  styles.scss
frontend/src/app/: app.component.ts
frontend/src/app/components/content-container/: content-container.component.ts
frontend/src/app/components/document-uploader/: document-uploader.component.ts
frontend/src/app/components/graph-viewer/: graph-viewer.component.ts
frontend/src/app/components/graphs-viewer/: graph-analysis-dialog.component.ts  graphs-viewer.component.ts
frontend/src/app/components/results/: results.component.ts
frontend/src/app/components/upload-manager/: upload-manager.component.ts
frontend/src/app/components/upload-progress/: upload-progress.component.ts
frontend/src/app/services/: content-container.service.ts  content-navigation.interface.ts  document.service.ts  graph-visualization.service.ts  graphs.service.ts  server-side-data-source.service.ts
nginx/: nginx.conf
scripts/: dev.sh  prod.sh  stop.sh
