[project]
name = "kg-viewer-backend"
version = "1.0.0"
description = "Backend API for Knowledge Graph Viewer - TTL file upload to Virtuoso"
authors = [
    {name = "Knowledge Graph Viewer", email = "info@example.com"}
]
dependencies = [
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "rdflib>=7.0.0",
    "requests>=2.31.0",
    "urllib3>=2.0.0"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true